Header population, li items created - not yet rendering; logo rendering but not to dimensions in css, z-index issues resolved.

--- a/private/styles/style.scss
+++ b/private/styles/style.scss
@@ -58,18 +58,21 @@ h6 {
         margin-right: 5px;
 
     & .article-body-header {
+        position:absolute;
         width: 705px;
         height: 38px;
         padding: 10 20 10 20;
+        margin-left:35px;
     
         & .rubric {
+            position:relative;
             text-transform:uppercase;
             font-size:15px;
             padding-right:10px;
             display:inline;
             line-height:18px;
             margin-left:35px;
-            color: #f00606;
+            text-color: #f00606;
 
         }
     }
